tests/baselines/reference/assignmentCompatForSignaturesWithTypePredicates04.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatForSignaturesWithTypePredicates04.ts(26,1): error TS2322: Type '(x: any) => x is number' is not assignable to type '(x: any) => x is E'.
  Type predicate 'x is number' is not assignable to 'x is E'.
    Type 'number' is not assignable to type 'E'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatForSignaturesWithTypePredicates04.ts (1 errors) ====
    
    enum E {
        A = 1,
        B = 2,
        C = 3,
    }
    
    function isA(x: any): x is number {
        return typeof x === "number";
    }
    
    function isB(x: any): x is E {
        switch (x) {
            case E.A:
            case E.B:
            case E.C:
                return true;
        }
        return false;
    }
    
    let myIsA = isA;
    let myIsB = isB;
    
    myIsA = myIsB;
    myIsB = myIsA;
    ~~~~~
!!! error TS2322: Type '(x: any) => x is number' is not assignable to type '(x: any) => x is E'.
!!! error TS2322:   Type predicate 'x is number' is not assignable to 'x is E'.
!!! error TS2322:     Type 'number' is not assignable to type 'E'.